--- a/src/css/main.css
+++ b/src/css/main.css
@@ -456,7 +456,6 @@ nav ul li a:hover {
 /* ----------------Desktop footer style--------------*/
 footer {
     background-color: #2b2b2b;
-    height: 25rem;
     padding: 2rem;
  }
  
@@ -467,17 +466,23 @@ footer {
  .footerList {
     text-decoration: none;
     color: #FFF;
-    font-size: 1rem;
+    font-size: 1.1rem;
     list-style: none;
+    line-height: 2.5rem;
  }
  
  i {
     color: #FFF;
     flex-flow: flex-end;
+    font-size: 1.2rem;
+    margin: .4rem;
  }
  
  .appRoutes {
-    float: right;
+    justify-content: flex-end;
+    margin-left: 5rem;
+    align-self: flex-end;
+    align-items: flex-end;
  }
  
  .copyRight {
@@ -488,8 +493,33 @@ footer {
 
  .ulContainer {
     display: flex;
+    padding: 3rem;
+ 
  }
 
+ .infoFooter {
+     margin:1.5rem;
+ }
+
+ .appInstall {
+     margin: 1rem;
+ }
+
+ .installBtns {
+     align-self: flex-end;
+     flex-direction: column;
+     text-align: right;
+ }
+
+ .footerListContainer li {
+     list-style: none;
+ }
+
+ .footerListContainer-B {
+     list-style: none;
+     padding-left: 6rem;
+ }
+ 
 
  /* ----------------Mobile footer style--------------*/
  @media screen and (max-width:800px) {
@@ -499,6 +529,9 @@ footer {
         height: 90%;
     }
 
+    .footerList {
+        line-height: .4rem;
+    }
     .socialIcons {
         align-self: flex-start;
         margin-bottom: 2rem;
@@ -508,6 +541,9 @@ footer {
         display: none;
     }
 
+    .footerListContainer {
+        padding: 0;
+    }
     .appRoutes {
         margin-bottom: 1rem;
         justify-content: flex-end;
@@ -515,13 +551,29 @@ footer {
     }
 
     .appInstall {
+        text-align: none;
+        margin: 0;
+        padding: .25rem;
         width: 8.5rem;
     }
+    
+    .infoFooter {
+        margin: 0;
+    }
 
-    .ulContainer {
-        margin: 2rem;
+    .installBtns {
+        margin: 0;
+    }
+
+    i {
+        margin: .25rem;
+    }
+
+    .ulContainer{
+        padding: 1.7rem;
     }
  }
+
 
  /* -------- modal styles -------------------*/
  .modalContainer {
