--- a/src/css/main.css
+++ b/src/css/main.css
@@ -559,6 +559,7 @@ footer {
 
     .appRoutes {
         margin-bottom: 1rem;
+        margin-left: 3rem;
         justify-content: flex-end;
         align-self: flex-end;
     }
@@ -581,10 +582,6 @@ footer {
     i {
         margin: .25rem;
         font-size: 1.2rem; 
-    }
-
-    .ulContainer {
-        margin: 1.7rem;
     }
  }
 
